--- a/Biblioteczka/Windows/NewEntry.xaml
+++ b/Biblioteczka/Windows/NewEntry.xaml
@@ -31,7 +31,7 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Row="0" Content="Nie wczytano zdjęcia okładki!" Foreground="Red" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                <Image x:Name="bookImage" Grid.Row="0" Margin="8"/>
+                <Image x:Name="bookImage" Source="{Binding Image}" Grid.Row="0" Margin="8"/>
 
                 <Button Grid.Row="1" Grid.Column="0" Content="Wybierz zdjęcie okładki" Width="200" Margin="7" Click="SelectImageButtonClick"/>
             </Grid>
@@ -67,22 +67,17 @@
                 <Label Grid.Column="0" Grid.Row="5" Content="Link do audiobooka:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 <Label Grid.Column="0" Grid.Row="6" Content="Link do adaptacji:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
-                <TextBox Grid.Column="1" Grid.Row="0" Margin="7" VerticalContentAlignment="Center"/>
-                <TextBox Grid.Column="1" Grid.Row="1" Margin="7" VerticalContentAlignment="Center"/>
-                <ComboBox Grid.Column="1" Grid.Row="2" Margin="7">
-                    <ComboBoxItem Content="XDD"/>
-                    <ComboBoxItem Content="XDDD"/>
-                    <ComboBoxItem Content="XDDDD"/>
-                    <ComboBoxItem Content="XDDDDD"/>
-                </ComboBox>
-                <TextBox Grid.Column="1" Grid.Row="3" Margin="7" TextWrapping="Wrap"/>
+                <TextBox Grid.Column="1" Text="{Binding Title}" Grid.Row="0" Margin="7" VerticalContentAlignment="Center"/>
+                <TextBox Grid.Column="1" Text="{Binding Author}" Grid.Row="1" Margin="7" VerticalContentAlignment="Center"/>
+                <ComboBox x:Name="bookCategory" Grid.Column="1" Grid.Row="2" Margin="7" SelectionChanged="bookCategory_SelectionChanged"/>
+                <TextBox Grid.Column="1" Text="{Binding Description}" Grid.Row="3" Margin="7" TextWrapping="Wrap"/>
                 <Grid Grid.Column="1" Grid.Row="4" Margin="7">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="110"/>
                     </Grid.ColumnDefinitions>
 
-                    <TextBox x:Name="bookEbook" Grid.Column="0" VerticalContentAlignment="Center"/>
+                    <TextBox x:Name="bookEbook" Text="{Binding EbookLink}" Grid.Column="0" VerticalContentAlignment="Center"/>
                     <Button x:Name="ebookFindButton" Grid.Column="1" Content="Szukaj w Internecie" Click="ebookFindButton_Click"/>
                 </Grid>
                 <Grid Grid.Column="1" Grid.Row="5" Margin="7">
@@ -91,7 +86,7 @@
                         <ColumnDefinition Width="110"/>
                     </Grid.ColumnDefinitions>
 
-                    <TextBox x:Name="bookAudiobook" Grid.Column="0" VerticalContentAlignment="Center"/>
+                    <TextBox x:Name="bookAudiobook" Text="{Binding AudiobookLink}" Grid.Column="0" VerticalContentAlignment="Center"/>
                     <Button x:Name="audiobookFindButton" Grid.Column="1" Content="Szukaj w Internecie" Click="audiobookFindButton_Click"/>
                 </Grid>
                 <Grid Grid.Column="1" Grid.Row="6" Margin="7">
@@ -100,7 +95,7 @@
                         <ColumnDefinition Width="110"/>
                     </Grid.ColumnDefinitions>
 
-                    <TextBox x:Name="bookMovie" Grid.Column="0" VerticalContentAlignment="Center"/>
+                    <TextBox x:Name="bookMovie" Text="{Binding MovieLink}" Grid.Column="0" VerticalContentAlignment="Center"/>
                     <Button x:Name="movieFindButton" Grid.Column="1" Content="Szukaj w Internecie" Click="movieFindButton_Click"/>
                 </Grid>
             </Grid>
@@ -114,7 +109,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="1" Content="Dodaj nowy wpis" Width="200" Margin="7"/>
+            <Button x:Name="AddButton" Grid.Column="1" Content="Dodaj nowy wpis" Width="200" Margin="7" Click="AddButtonClick"/>
             <Button Grid.Column="2" Content="Anuluj" Width="200" Margin="7" Click="CancelButtonClick"/>
         </Grid>
     </Grid>
