--- a/Biblioteczka/CustomControls/BookEntry.xaml
+++ b/Biblioteczka/CustomControls/BookEntry.xaml
@@ -21,10 +21,10 @@
         <Border Grid.Column="3" BorderBrush="Gray" BorderThickness="1"/>
         <Border Grid.Column="4" BorderBrush="Gray" BorderThickness="1"/>
 
-        <Label x:Name="counterText" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBlock x:Name="authorText" Text="{Binding Author}" Grid.Column="1" TextAlignment="Center" TextWrapping="WrapWithOverflow" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="#FF31BD31"/>
-        <TextBlock x:Name="titleText" Text="{Binding Title}" Grid.Column="2" TextAlignment="Center" TextWrapping="WrapWithOverflow" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#FFFF0003" FontWeight="Bold" FontSize="20"/>
-        <TextBlock x:Name="categoryText" Text="{Binding CategoryName}" Grid.Column="3" TextAlignment="Center" TextWrapping="WrapWithOverflow" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Blue" FontWeight="Bold" FontSize="14"/>
-        <Button x:Name="buttonDetails" Grid.Column="4" Content="Szczegóły" Margin="10" Click="Button_Click"/>
+        <Label x:Name="ordinalLabel" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <TextBlock x:Name="authorLabel" Text="{Binding Author}" Grid.Column="1" TextAlignment="Center" TextWrapping="WrapWithOverflow" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="#FF31BD31"/>
+        <TextBlock x:Name="titleLabel" Text="{Binding Title}" Grid.Column="2" TextAlignment="Center" TextWrapping="WrapWithOverflow" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#FFFF0003" FontWeight="Bold" FontSize="20"/>
+        <TextBlock x:Name="categoryLabel" Text="{Binding CategoryName}" Grid.Column="3" TextAlignment="Center" TextWrapping="WrapWithOverflow" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Blue" FontWeight="Bold" FontSize="14"/>
+        <Button x:Name="openDetailsButton" Grid.Column="4" Content="Szczegóły" Margin="10" Click="Button_Click"/>
     </Grid>
 </UserControl>
